--- a/gcopter/CMakeLists.txt
+++ b/gcopter/CMakeLists.txt
@@ -1,59 +1,88 @@
-cmake_minimum_required(VERSION 2.8.3)
-
+cmake_minimum_required(VERSION 3.5)
 project(gcopter)
 
-set(CMAKE_CXX_FLAGS "-std=c++14")
-set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -fPIC")
+# Use C++14
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_BUILD_TYPE Release)
+add_compile_options(-Wall -O3 -fPIC)
 
+# Dependencies
+find_package(ament_cmake REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(ompl REQUIRED)
 
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
+
+# Include directories
+include_directories(
+  include
+  ${EIGEN3_INCLUDE_DIRS}
+  ${OMPL_INCLUDE_DIRS}
+)
+
+# Library
+add_library(gcopter src/global_planning.cpp)
+
+target_link_libraries(gcopter
+  ${OMPL_LIBRARIES}
+)
+
+ament_target_dependencies(gcopter
+  rclcpp
   std_msgs
   geometry_msgs
   sensor_msgs
   visualization_msgs
 )
 
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES gcopter
-  DEPENDS OMPL
+install(DIRECTORY
+  launch
+  config
+  DESTINATION share/${PROJECT_NAME}
 )
 
-include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-  ${OMPL_INCLUDE_DIRS}
-  ${EIGEN3_INCLUDE_DIRS}
+# Executable
+add_executable(global_planning_node src/global_planning.cpp)
+
+target_link_libraries(global_planning_node
+  gcopter
 )
 
-## Library
-add_library(gcopter
-  src/global_planning.cpp
+ament_target_dependencies(global_planning_node
+  rclcpp
+  std_msgs
+  geometry_msgs
+  sensor_msgs
+  visualization_msgs
 )
 
-target_link_libraries(gcopter
-  ${OMPL_LIBRARIES}
-  ${catkin_LIBRARIES}
+# Install targets
+install(TARGETS
+  gcopter
+  global_planning_node
+  DESTINATION lib/${PROJECT_NAME}
 )
 
-add_dependencies(gcopter
-  ${${PROJECT_NAME}_EXPORTED_TARGETS}
-  ${catkin_EXPORTED_TARGETS}
+install(DIRECTORY include/
+  DESTINATION include/
 )
 
-## Executable
-add_executable(global_planning src/global_planning.cpp)
-
-target_link_libraries(global_planning
-  ${OMPL_LIBRARIES}
-  ${catkin_LIBRARIES}
+# Export package
+ament_export_include_directories(include)
+ament_export_libraries(gcopter)
+ament_export_dependencies(
+  rclcpp
+  std_msgs
+  geometry_msgs
+  sensor_msgs
+  visualization_msgs
+  ompl
+  Eigen3
 )
 
-add_dependencies(global_planning
-  ${${PROJECT_NAME}_EXPORTED_TARGETS}
-  ${catkin_EXPORTED_TARGETS}
-)
+ament_package()
