--- a/gcopter/package.xml
+++ b/gcopter/package.xml
@@ -1,24 +1,36 @@
-<package>
+<?xml version="1.0"?>
+<package format="3">
   <name>gcopter</name>
-  <author email="wangzhepei@live.com">Zhepei Wang</author>
-  <maintainer email="wangzhepei@live.com">Zhepei Wang</maintainer>
   <version>0.1.0</version>
-  <description>
-      the gcopter package
-  </description>
+  <description>The gcopter package</description>
+
+  <maintainer email="wangzhepei@live.com">Zhepei Wang</maintainer>
+  <author email="wangzhepei@live.com">Zhepei Wang</author>
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <!-- Build system -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
+  <!-- Build dependencies -->
+  <build_depend>rclcpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>visualization_msgs</run_depend>
-  
+  <build_depend>ompl</build_depend>
+  <build_depend>eigen3_cmake_module</build_depend>
+
+  <!-- Execution dependencies -->
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
+  <exec_depend>ompl</exec_depend>
+  <exec_depend>eigen3_cmake_module</exec_depend>
+
+  <!-- Export -->
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
