--- a/gcopter/CMakeLists.txt
+++ b/gcopter/CMakeLists.txt
@@ -1,59 +1,40 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.10)
 
 project(gcopter)
 
-set(CMAKE_CXX_FLAGS "-std=c++14")
-set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -fPIC")
 
 find_package(Eigen3 REQUIRED)
 find_package(ompl REQUIRED)
-
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  std_msgs
-  geometry_msgs
-  sensor_msgs
-  visualization_msgs
-)
-
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES gcopter
-  DEPENDS OMPL
-)
+find_package(yaml-cpp REQUIRED)
 
 include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-  ${OMPL_INCLUDE_DIRS}
-  ${EIGEN3_INCLUDE_DIRS}
+    include
+    ${OMPL_INCLUDE_DIRS}
+    ${EIGEN3_INCLUDE_DIRS}
+    ${YAML_CPP_INCLUDE_DIRS}
 )
 
 ## Library
-add_library(gcopter
-  src/global_planning.cpp
+add_library(gcopter_lib
+    src/global_planning.cpp
 )
 
-target_link_libraries(gcopter
-  ${OMPL_LIBRARIES}
-  ${catkin_LIBRARIES}
+target_link_libraries(gcopter_lib
+    ${OMPL_LIBRARIES}
+    Eigen3::Eigen
 )
 
-add_dependencies(gcopter
-  ${${PROJECT_NAME}_EXPORTED_TARGETS}
-  ${catkin_EXPORTED_TARGETS}
-)
+target_include_directories(gcopter_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-## Executable
-add_executable(global_planning src/global_planning.cpp)
+## Example Executable
+add_executable(global_planning_demo src/global_planning.cpp)
 
-target_link_libraries(global_planning
-  ${OMPL_LIBRARIES}
-  ${catkin_LIBRARIES}
-)
-
-add_dependencies(global_planning
-  ${${PROJECT_NAME}_EXPORTED_TARGETS}
-  ${catkin_EXPORTED_TARGETS}
+target_link_libraries(global_planning_demo
+    gcopter_lib
+    ${OMPL_LIBRARIES}
+    Eigen3::Eigen
+    yaml-cpp
 )
